Add .png for media links in index.html files and add styling to the heading section in styles.css file

--- a/styles.css
+++ b/styles.css
@@ -74,5 +74,14 @@
     color: var(--primary-t-blue);
   }
 
+  .headline>ul {
+    display: flex;
+  }
+
+  .media-link {
+    text-decoration: none;
+    list-style: none;
+  }
+
 
 }
