--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@media only screen and (min-width: 25rem) {
   * {
     margin: 0;
     padding: 0;
@@ -57,7 +56,7 @@
   }
 
   .heading {
-    margin: 35% auto 0;
+    margin: 30% auto 0;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -95,6 +94,11 @@
     list-style: none;
   }
 
+  .media-link a {
+    text-decoration: none;
+    display: block;
+  }
+
   .action-btn {
     margin: 0 auto;
     padding: 0.4rem 0.5rem;
@@ -111,4 +115,3 @@
   .action-btn img {
     width: 1.25rem;
   }
-}
