--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 25rem) {
   * {
     margin: 0;
     padding: 0;
@@ -56,7 +57,7 @@
   }
 
   .heading {
-    margin: 30% auto 0;
+    margin: 35% auto 0;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -94,11 +95,6 @@
     list-style: none;
   }
 
-  .media-link a {
-    text-decoration: none;
-    display: block;
-  }
-
   .action-btn {
     margin: 0 auto;
     padding: 0.4rem 0.5rem;
@@ -115,3 +111,4 @@
   .action-btn img {
     width: 1.25rem;
   }
+}
