--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
 
   --primary-t-blue: rgb(23, 43, 77);
   --secondary-t-green: rgb(58, 74, 66);
+  --secondary-b-light: rgb(235, 240, 238);
+  --secondary-b-dark: rgb(208, 217, 212);
 }
 
 header {
@@ -18,6 +20,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .logo-container {
@@ -43,8 +46,7 @@ header {
 }
 
 .headline {
-  position: absolute;
-  top: 3rem;
+  margin-top: 3rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -95,7 +97,7 @@ li {
   list-style: none;
 }
 
-.action-btn {
+.action-btn-sec {
   margin: 0 auto;
   padding: 0.4rem 0.5rem;
   background-color: transparent;
@@ -103,7 +105,7 @@ li {
   border-radius: 2rem;
 }
 
-.action-btn:hover {
+.action-btn-sec:hover {
   cursor: pointer;
   box-shadow: 0 8px 16px 0 rgba(30, 72, 143, 0.239);
 }
@@ -111,4 +113,66 @@ li {
 .media-link img,
 .action-btn img {
   width: 1.25rem;
+}
+
+/* Works Section Starts Here */
+.works-section {
+  margin: 0 auto;
+  padding: 4rem 0;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.25rem;
+}
+
+.works-section > h2 {
+  color: var(--primary-t-blue);
+  text-align: center;
+}
+
+.grid-container {
+  margin-top: 2rem;
+  display: grid;
+  grid-area: 6 / 1;
+  row-gap: 1rem;
+  align-content: center;
+}
+
+.grid-card {
+  width: 100%;
+  height: 40vh;
+  background-color: var(--secondary-b-light);
+  border: 1px solid var(--secondary-b-dark);
+  border-radius: 0.5rem;
+}
+
+.img-container {
+  width: 100%;
+  height: 50%;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
+.card-meta {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: white;
+  border-radius: 0.5rem;
+}
+
+.card-meta > h3 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.work-categories {
+  display: flex;
+  gap: 0.5rem;
 }
