--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   font-family: 'Inter', sans-serif;
 
   --primary-t-blue: rgb(23, 43, 77);
+  --primary-t-green: rgb(54, 179, 126);
   --secondary-t-green: rgb(58, 74, 66);
   --secondary-b-light: rgb(235, 240, 238);
   --secondary-b-dark: rgb(208, 217, 212);
@@ -77,7 +78,7 @@ h1 {
 h2 {
   margin-top: -2rem;
   font-size: 2.25rem;
-  color: rgb(54, 179, 126);
+  color: var(--primary-t-green);
 }
 
 p {
@@ -119,7 +120,7 @@ li {
 .works-section {
   margin: 0 auto;
   padding: 4rem 0;
-  width: 80%;
+  width: 86%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -141,27 +142,20 @@ li {
 }
 
 .grid-card {
+  padding-top: 12.5rem;
   width: 100%;
-  height: 40vh;
   background-color: var(--secondary-b-light);
   border: 1px solid var(--secondary-b-dark);
   border-radius: 0.5rem;
 }
 
-.img-container {
-  width: 100%;
-  height: 50%;
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-}
-
 .card-meta {
   width: 100%;
-  height: 50%;
+  padding: 1rem 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  gap: 1rem;
   text-align: center;
   background-color: white;
   border-radius: 0.5rem;
@@ -170,9 +164,32 @@ li {
 .card-meta > h3 {
   font-size: 1.5rem;
   line-height: 2rem;
+  color: var(--secondary-t-green);
 }
 
 .work-categories {
   display: flex;
-  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+  gap: 0.45rem;
+}
+
+.work-categories > li {
+  padding: 0.5rem 0.5rem;
+  font-size: 0.7rem;
+  font-weight: 600;
+  color: var(--secondary-t-green);
+  background-color: var(--secondary-b-light);
+  border-radius: 0.25rem;
+}
+
+.action-btn {
+  margin: 0.5rem auto;
+  padding: 0.8rem;
+  font-size: 0.88rem;
+  letter-spacing: 0.03em;
+  color: white;
+  text-decoration: none;
+  background-color: var(--primary-t-green);
+  border-radius: 0.25rem;
 }
