--- a/styles.css
+++ b/styles.css
@@ -167,14 +167,16 @@ li {
   color: var(--secondary-t-green);
 }
 
-.work-categories {
+/* .work-categories {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.45rem;
-}
+} */
 
 .work-categories > li {
+  float: left;
+  margin: 0 0.25rem;
   padding: 0.5rem 0.5rem;
   font-size: 0.66rem;
   font-weight: 600;
