--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
 
+  /* overflow-x: hidden; */
+
   --primary-t-blue: rgb(23, 43, 77);
   --primary-t-green: rgb(54, 179, 126);
   --secondary-t-green: rgb(58, 74, 66);
@@ -167,16 +169,14 @@ li {
   color: var(--secondary-t-green);
 }
 
-/* .work-categories {
+.work-categories {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 0.45rem;
-} */
+}
 
 .work-categories > li {
-  float: left;
-  margin: 0 0.25rem;
   padding: 0.5rem 0.5rem;
   font-size: 0.66rem;
   font-weight: 600;
@@ -295,4 +295,62 @@ li {
   color: var(--primary-t-green);
   background-color: white;
   border-radius: 0.25rem;
+}
+
+.contact-section {
+  position: relative;
+  margin: 0 auto;
+  padding: 2.5rem 1rem 3.5rem;
+  text-align: center;
+}
+
+.contact-section > h2 {
+  margin: 0 auto;
+  width: 90%;
+  color: var(--primary-t-blue);
+}
+
+#contact-form {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+input,
+#client-msg {
+  padding: 0.75rem;
+  color: --secondary-b-dark;
+  border: 1px solid var(--secondary-b-dark);
+  border-radius: 0.25rem;
+}
+
+#client-msg {
+  border-color: var(--primary-t-green);
+}
+
+#contact-form > button {
+  border: none;
+}
+
+.contact-section > ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.25rem;
+}
+
+.contact-section > span {
+  display: block;
+  margin-top: 0.8rem;
+  color: rgb(66, 82, 110);
+}
+
+.contact-bg {
+  position: absolute;
+  right: 0;
+  bottom: 6rem;
+  width: 3.5rem;
+  height: 8rem;
+  background: url(icon-img/contact-bg.svg) no-repeat;
 }
