--- a/styles.css
+++ b/styles.css
@@ -294,10 +294,11 @@ li {
   border-radius: 0.25rem;
 }
 
+/* Contact Section */
 .contact-section {
   position: relative;
   margin: 0 auto;
-  padding: 2.5rem 1rem 3.5rem;
+  padding: 2.5rem 1rem 4rem;
   text-align: center;
 }
 
@@ -308,7 +309,7 @@ li {
 }
 
 #contact-form {
-  padding: 2rem 0;
+  padding: 3.5rem 0;
   display: flex;
   flex-direction: column;
   gap: 1rem;
