--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
 
   --primary-t-blue: rgb(23, 43, 77);
   --primary-t-green: rgb(54, 179, 126);
@@ -41,6 +42,10 @@ header {
   font-size: 1.4rem;
   text-align: center;
   font-weight: 600;
+}
+
+nav > ul {
+  display: none;
 }
 
 #hamburger {
@@ -102,6 +107,10 @@ li {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 .action-btn-sec {
   margin: 0 auto;
   padding: 0.4rem 0.5rem;
@@ -121,13 +130,13 @@ li {
 }
 
 /* Works Section Starts Here */
-.works-section {
+#works-section {
   margin: 0 auto;
   padding: 4rem 1rem;
   text-align: center;
 }
 
-.works-section > h2 {
+#works-section h2 {
   color: var(--primary-t-blue);
   text-align: center;
 }
@@ -208,18 +217,18 @@ li {
 }
 
 /* About Me Section */
-.about-section {
+#about-section {
   margin: 0 auto;
   padding: 1rem;
   text-align: center;
 }
 
-.about-section > h2 {
+#about-section h2 {
   margin-top: 0;
   color: var(--primary-t-blue);
 }
 
-.about-section > p {
+#about-section > p {
   margin-bottom: 2rem;
   font-size: 1.05rem;
   font-weight: 400;
@@ -300,13 +309,14 @@ li {
 }
 
 /* Contact Section */
-.contact-section {
+#contact-section {
+  position: relative;
   margin: 0 auto;
   padding: 2.5rem 1rem 0.5rem;
   text-align: center;
 }
 
-.contact-section > h2 {
+#contact-section > h2 {
   margin: 0 auto;
   width: 90%;
   color: var(--primary-t-blue);
@@ -335,29 +345,145 @@ input,
   border: none;
 }
 
-.contact-section > ul {
+#contact-section > ul {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1.25rem;
 }
 
-.contact-section > span {
+#contact-section > span {
   display: block;
   margin-top: 0.8rem;
   color: rgb(66, 82, 110);
 }
 
-.contact-bg {
-  position: relative;
-}
-
-.contact-bg > img {
+#contact-bg {
   position: absolute;
-  right: -1.05rem;
-  top: -8rem;
+  right: 0;
+  bottom: 19rem;
 }
 
 #contact-line-break {
   margin: 15rem auto 0;
+}
+
+
+/* DESKTOP VERSION */
+
+@media screen and (min-width: 760px) {
+
+  header {
+    position: absolute;
+    background-color: transparent;
+    justify-content: center;
+  }
+
+  .logo-container {
+    display: none;
+  }
+
+  #hamburger {
+    display: none;
+  }
+
+  nav > ul {
+    width: 100vw;
+    height: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.25rem;
+  }
+
+  .nav-menu {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: rgb(25, 28, 28);
+    font-weight: 600;
+  }
+
+  .headline {
+    margin-top: 0;
+    height: 100vh;
+    background: url(icon-img/desktop/Header-illustration-desktop.svg) no-repeat;
+    background-size: 100%;
+    width:100%;
+    justify-content: flex-start;
+    gap: 2.5rem;
+  }
+
+  .heading {
+    padding-top: 17%;
+    width: 65rem;
+  }
+
+  h1{
+    font-size: 4rem;
+  }
+
+  .heading > h2 {
+    margin-top: -2rem;
+    font-size: 4rem
+  }
+
+  .heading > p {
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+  }
+
+  .media-link img,
+  .action-btn img {
+  width: 1.5rem;
+}
+
+.action-btn-sec {
+  margin-top: 8rem;
+  padding: 0.6rem 0.75rem;
+}
+
+/* Works Section */
+/* #works-section {
+  padding: 10rem;
+} */
+
+#works-section > h2 {
+  font-size: 2.5rem;
+}
+
+#works-section > img {
+  display: none;
+}
+
+.works-grid-container {
+  grid-template-columns: repeat(3, 30%);
+  justify-content: center;
+  column-gap: 1.5rem;
+}
+
+.works-grid-card {
+  padding-top: 20rem;
+}
+
+.works-card-meta > h3 {
+  width: 70%;
+  font-size: 2rem;
+  line-height: 2.5rem;
+}
+
+.work-categories {
+  gap: 0.6rem;
+}
+
+.work-categories > li {
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+}
+
+.action-btn {
+  margin-top: 1rem;
+  padding: 1rem;
+  font-size: 1.25rem;
+}
+
 }
